# mcp-buy123-vendor

./: .env.example  .gitignore  .mcp.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  README.zh-tw.md  SECURITY.md  _src_bootstrap.py  app.py  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
auth/: browser_login.py  vendor_login.py
config/: constants.py  settings.py
connectors/: rest_client.py
docs/: public-boundary-decisions.md  release-security-checklist.md
scripts/auth/: playwright_login.py  test_connection.py  verify_playwright.py
src/mcp_buy123_vendor/: __init__.py  server.py
src/mcp_buy123_vendor/auth/: browser_login.py  vendor_login.py
src/mcp_buy123_vendor/config/: constants.py  settings.py
src/mcp_buy123_vendor/connectors/: rest_client.py
src/mcp_buy123_vendor/scripts/: __init__.py  playwright_login.py  test_connection.py
src/mcp_buy123_vendor/tools/: abnormal_order_tools.py  auth_tools.py  bundle_tools.py  channel_tools.py  common_tools.py  inventory_tools.py  permission_tools.py  product_tools.py  return_tools.py  shipment_tools.py  vendor_tools.py
tests/: test_all_tools.py  test_basic.py  test_entrypoints.py  test_task_1_1_naming_alignment.py  test_task_2_1_adversarial.py
tools/: abnormal_order_tools.py  auth_tools.py  bundle_tools.py  channel_tools.py  common_tools.py  inventory_tools.py  permission_tools.py  product_tools.py  return_tools.py  shipment_tools.py  vendor_tools.py
