[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-buy123-vendor"
version = "0.1.0"
description = "Model Context Protocol server for read-only buy123 vendor portal queries"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Asgard AI Platform", email = "dev@asgard.ai"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "mcp-server",
    "claude",
    "claude-desktop",
    "claude-code",
    "buy123",
    "vendor-portal",
    "vendor-api",
    "ai-tools",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/asgard-ai-platform/mcp-buy123-vendor"
Repository = "https://github.com/asgard-ai-platform/mcp-buy123-vendor"
Issues = "https://github.com/asgard-ai-platform/mcp-buy123-vendor/issues"
Documentation = "https://github.com/asgard-ai-platform/mcp-buy123-vendor#readme"

[project.optional-dependencies]
auth = [
    "playwright>=1.45.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
[project.scripts]
mcp-buy123-vendor = "mcp_buy123_vendor.server:main"
mcp-buy123-vendor-login = "mcp_buy123_vendor.scripts.playwright_login:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

include = ["mcp_buy123_vendor*"]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
